--- a/Changelog
+++ b/Changelog
@@ -38,7 +38,7 @@ version <next>:
 - Removed the ffserver program
 - Removed the ffmenc and ffmdec muxer and demuxer
 - VideoToolbox HEVC encoder and hwaccel
-
+- VAAPI-accelerated ProcAmp(color balance) video filter
 
 version 3.4:
 - deflicker video filter
