--- a/doc/fftools-common-opts.texi
+++ b/doc/fftools-common-opts.texi
@@ -102,6 +102,10 @@ Print detailed information about the muxer named @var{muxer_name}. Use the
 @item filter=@var{filter_name}
 Print detailed information about the filter name @var{filter_name}. Use the
 @option{-filters} option to get a list of all filters.
+
+@item bsf=@var{bit_stream_filter_name}
+Print detailed information about the bit stream filter name @var{bit_stream_filter_name}.
+Use the @option{-bsfs} option to get a list of all bit stream filters.
 @end table
 
 @item -version
