lavc/svt_hevc: add libsvt hevc encoder wrapper.
base on patch by Huang, Zhengxu from https://github.com/intel/SVT-HEVC

Signed-off-by: Huang, Zhengxu <zhengxu.huang@intel.com>
Signed-off-by: hassene <hassene.tmar@intel.com>
Signed-off-by: Jun Zhao <jun.zhao@intel.com>

--- a/Changelog
+++ b/Changelog
@@ -12,6 +12,7 @@ version <next>:
 - PCM-DVD encoder
 - GIF parser
 - vividas demuxer
+- add SVT(Scalable Video Technology) HEVC encoder
 
 
 version 4.1:
