Changelog: Add new entry for svt-hevc encoder
Signed-off-by: Huang, Zhengxu <zhengxu.huang@intel.com>
Signed-off-by: hassene <hassene.tmar@intel.com>
Signed-off-by: Jun Zhao <jun.zhao@intel.com>

--- a/Changelog
+++ b/Changelog
@@ -10,7 +10,7 @@ version <next>:
 - truehd_core bitstream filter
 - dhav demuxer
 - PCM-DVD encoder
-
+- add SVT(Scalable Video Technology) HEVC encoder
 
 version 4.1:
 - deblock filter
